--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+}
+
 canvas {
-    border: 1px solid #d3d3d3;
-    background-color: #f1f1f1;
+    border: 1px solid black;
 }
